# xpost-cli

./: .gitignore  CHANGELOG.md  README.md  daily_poster.py  daily_topics.json  pyproject.toml  requirements.txt  validator.py  xpost_cli.py
.github/workflows/: daily_post.yml
docs/: zenn_draft.md
tests/: test_manual.ps1
