[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "xpost-cli"
version = "0.2.0"
description = "AI-powered X (Twitter) post generator for Japanese creators"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["twitter", "x", "sns", "ai", "openai", "cli", "japanese"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Utilities",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "tweepy>=4.14.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.scripts]
xpost = "xpost_cli:main"

[project.urls]
Homepage = "https://github.com/sohmaoda-svg/xpost-cli"
"Bug Tracker" = "https://github.com/sohmaoda-svg/xpost-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["xpost_cli*"]
